--- a/templates/quickstart-bitbucket-dc.template.yaml
+++ b/templates/quickstart-bitbucket-dc.template.yaml
@@ -1041,10 +1041,10 @@ Resources:
           PropagateAtLaunch: true
         # NOTE: The leading COMMIT/TIMESTAMP are used to locate the position to update; see scripts/update-tags.py
         - Key: "atl:quickstart:commit-id"
-          Value: "COMMIT: 36ba93042f7169153887e51e0abf97de0750e452"
+          Value: "COMMIT: 4b65f636514401354e61aaaa9f1c4c3ec08d5b94"
           PropagateAtLaunch: true
         - Key: "atl:quickstart:timestamp"
-          Value: "TIMESTAMP: 2023-01-19T05:50:52Z"
+          Value: "TIMESTAMP: 2023-01-23T04:18:44Z"
           PropagateAtLaunch: true
   ClusterNodeLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
@@ -1356,7 +1356,7 @@ Resources:
         EBSEnabled: true
         VolumeSize: !Ref ElasticsearchNodeVolumeSize
         VolumeType: gp2
-      ElasticsearchVersion: "6.8"
+      ElasticsearchVersion: "6.8" #min 7.10 for bitbucket 8
       ElasticsearchClusterConfig:
         InstanceType: !Ref ElasticsearchInstanceType
       AccessPolicies:
@@ -1701,7 +1701,7 @@ Resources:
     Condition: DBEnginePostgres
     Properties:
       AllocatedStorage: !Ref DBStorage
-#      StorageEncrypted: !Ref DBStorageEncrypted #FIXME
+      StorageEncrypted: !Ref DBStorageEncrypted
       DBInstanceClass: !Ref DBInstanceClass
       DBInstanceIdentifier: !GetAtt DbInstanceName.DBInstanceName
       DBName: !If [RestoreRDSOrStandby, !Ref "AWS::NoValue", bitbucket]
@@ -2338,10 +2338,10 @@ Resources:
           PropagateAtLaunch: true
         # NOTE: The leading COMMIT/TIMESTAMP are used to locate the position to update; see scripts/update-tags.py
         - Key: "atl:quickstart:commit-id"
-          Value: "COMMIT: 36ba93042f7169153887e51e0abf97de0750e452"
+          Value: "COMMIT: 4b65f636514401354e61aaaa9f1c4c3ec08d5b94"
           PropagateAtLaunch: true
         - Key: "atl:quickstart:timestamp"
-          Value: "TIMESTAMP: 2023-01-19T05:50:52Z"
+          Value: "TIMESTAMP: 2023-01-23T04:18:44Z"
           PropagateAtLaunch: true
   BambooClusterNodeLaunchConfig:
     Condition: IsBambooIncluded
@@ -2361,15 +2361,14 @@ Resources:
                   - "ATL_APP_DATA_MOUNT_ENABLED=false"
                   - ""
                   - !Sub ["ATL_PRODUCT_VERSION=${BambooVersion}", BambooVersion: !Ref BambooVersion]
-                  - !If  [IsBambooAdminPasswordProvided, !Sub ["ATL_ADMIN_PASSWORD=${BBAdminPassword}", BBAdminPassword: !Ref BitbucketAdminPassword], !Ref "AWS::NoValue"]
-                  - !If  [IsBBAdminPasswordProvided, !Sub ["bamboo.admin.username=${ atl_admin_username }"
-                  - !If  [IsBBAdminFullNameProvided, !Sub ["bamboo.admin.fullname=${ atl_admin_fullname }"
-                  - !If  [IsBambooBAdminPasswordProvided, !Sub ["bamboo.admin.password=${ atl_admin_password }"
-                  - !If  [IsBambooAdminEmailProvided, !Sub ["bamboo.admin.email=${ atl_admin_email }"
-                  - !If  [IsBambooAgencySecurityTokenProvided, !Sub ["bamboo.agent.security.token=${ security_token }}"
-                  - !If  [IsBambooImportOptionProvided, !Sub ["atl_import_option=${ atl_import_option }"
-                  - !If  [IsBambooImportPathProvided, !Sub ["atl_import_path=${atl_import_path}"
-                  - !If  [IsBambooLicenseKeyProvided, !Sub ["ATL_LICENSEKEY='${BambooLicenseKey}'", LicenseKey: !Ref BitbucketLicenseKey], !Ref "AWS::NoValue"]
+#                  - !If  [IsBBAdminPasswordProvided, !Sub ["bamboo.admin.username=${ atl_admin_username }"], !Ref "AWS::NoValue"]
+#                  - !If  [IsBBAdminFullNameProvided, !Sub ["bamboo.admin.fullname=${ atl_admin_fullname }"], !Ref "AWS::NoValue"]
+#                  - !If  [IsBambooAdminPasswordProvided, !Sub ["ATL_ADMIN_PASSWORD=${BBAdminPassword}", BBAdminPassword: !Ref BitbucketAdminPassword], !Ref "AWS::NoValue"]
+#                  - !If  [IsBambooAdminEmailProvided, !Sub ["bamboo.admin.email=${ atl_admin_email }"], !Ref "AWS::NoValue"]
+#                  - !If  [IsBambooAgencySecurityTokenProvided, !Sub ["bamboo.agent.security.token=${ security_token }}"], !Ref "AWS::NoValue"]
+#                  - !If  [IsBambooImportOptionProvided, !Sub ["atl_import_option=${ atl_import_option }"], !Ref "AWS::NoValue"]
+#                  - !If  [IsBambooImportPathProvided, !Sub ["atl_import_path=${atl_import_path}"], !Ref "AWS::NoValue"]
+#                  - !If  [IsBambooLicenseKeyProvided, !Sub ["ATL_LICENSEKEY='${BambooLicenseKey}'", LicenseKey: !Ref BitbucketLicenseKey], !Ref "AWS::NoValue"]
                   - !Sub ["atl_broker_uri=${atlBrokerUri}", atlBrokerUri: "nio://0.0.0.0:54663"]
                   - !Sub ["atl_broker_client_uri=${atlBrokerClientUri}", atlBrokerClientUri: !Sub ["failover:(tcp://${LoadBalancerDNSName}54663?wireFormat.maxInactivityDuration=300000)?initialReconnectDelay=15000&amp;maxReconnectAttempts=10", {  LoadBalancerDNSName: !GetAtt LoadBalancer.DNSName }]]
                   - !Sub ["ATL_BB_BASEURL=${BaseURL}/bamboo", BaseURL: !If [UseCustomDnsName, !Sub ["${HTTP}://${CustomDNSName}", { HTTP: !If [DoSSL, https, http], CustomDNSName: !Ref CustomDnsName }], !Sub ["${HTTP}://${LoadBalancerDNSName}", { HTTP: !If [DoSSL, https, http], LoadBalancerDNSName: !GetAtt LoadBalancer.DNSName }]]]
